Give relative path for swizzle asset, I guess

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -5,7 +5,7 @@ template: splash
 hero:
   tagline: It's UUID, but good-looking.
   image:
-    file: /swizzle.svg
+    file: ../../../public/swizzle.svg
   actions:
     - text: Read the core specification
       link: /spec/core/
